--- a/angular.json
+++ b/angular.json
@@ -101,5 +101,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "9d83f254-bb4f-4074-80dd-325ae0f750fd"
     }
 }
